[package]
authors.workspace = true
categories.workspace = true
description = "A crate managing CTAP2 transport-specific bindings."
edition.workspace = true
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "src/"]
keywords.workspace = true
license.workspace = true
name = "passkey-transports"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"


[lints]
workspace = true

[features]
default = []
linux = ["dep:libc", "dep:udev", "dep:nix", "dep:tokio", "dep:rand", "dep:hidparser", "tokio/time"]

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", optional = true }
nix = { version = "0.29", features = ["ioctl"], optional = true }
tokio = { version = "1", features = ["net"], optional = true }
udev = { version = "0.9", optional = true }
hidparser = { version = "1.0", optional = true }
rand = { version = "0.10", optional = true }

[dev-dependencies]
